fix nested addons sometimes remaining visible when parent addon is hidden

--- a/src/main/java/com/lorepo/icplayer/public/theme/player.css
+++ b/src/main/java/com/lorepo/icplayer/public/theme/player.css
@@ -1244,5 +1244,6 @@ hr, table, fieldset {
 
 .inner_addon {
     position: relative;
+    visibility: inherit!important;
 }
 
